Version 1.7.1, 2014-02-17 23:36:00 +0100

  General:
  * New: add option to shut down engine together with reader app
  * New: translation updates
  * Changed: get image file type by magic bytes
  * Fixed: remoe css classes from item body HTML text (issue #31)
  
  Sailfish OS:
  * Fixed: listen and react to network access changes (issue #25)

Version 1.7.0, 2014-02-12 20:53:00 +0100

  General:
  * New: display and handle enclosures (attached files) (issue #28)
  * New: option to download and cache images at updating (issue #16)
  * New: dialog for opening links (issue #12)
  * Fixed: resize pictures on item view (taken from Martin Grimme's Tidings RSS reader)
    (issue #11)
  
  Sailfish OS:
  * Fixed: search field was losing focus (issue #4)
  * Fixed: updateFinished signal was sent before stats got updated (issue #30)
  * Fixed: adding new feed from cover action did not activate busy state (issue #29)
  * Fixed: update label on cover page is not pulsing during refresh (issue #27)

Version 1.6.1, 2014-01-31 01:51:27 +0100

  General:
  * Fixed: minor stuff in translations
  * Fixed: feed list view was not refreshed after complete sync update
  
  Sailfish OS:
  * Fixed: all posts view not refreshed after complete sync update (issue #26)

Version 1.6.0, 2014-01-29 18:58:58 +0100

  General:
  * NEW: second mode for the main view, choose between folders or all feeds (issue #10)
  * NEW: the daemon is now reacting to network (only on Harmattan) and config changes
    (on both) (issue #17)
  * Changed: nicer contributors page (issue #18)
  * Changed: better indication for feeds and folders with no unread articles (issue #23)
  
  Harmattan:
  * NEW: translations for Spanish and Chinese(China)
  
  Sailfish OS:
  * NEW: display last refresh date in pulley menu (issu #9)
  * NEW: translations for Spanish, Italian and Chinese(China)
  * Fixed: unread count on cover is not updated when the app is displayed (issue #13)