@@ -1,5 +1,6 @@
 import QtQuick 2.0
-import QtWebKit 3.0
+//import QtWebKit 3.0
+//import QtWebKit.experimental 1.0
 import Sailfish.Silica 1.0
 
 Page {
@@ -15,13 +16,22 @@ Page {
         }
     }
 
-//    Component.onCompleted: {
-//            webView.url = itemUrl
-//        }
+
+    BusyIndicator {
+        id: loadStatus
+        z: 2
+        anchors { top: parent.top; topMargin: 16; horizontalCenter: parent.horizontalCenter }
+        visible: webView.loading
+        running: visible
+        opacity: visible ? 1 : 0
+        Behavior on opacity { FadeAnimation {} }
+    }
 
     SilicaWebView {
         id: webView
         anchors.fill: parent
+//        width: singleWebView.width
+//        height: singleWebView.height
 
 //        header: PageHeader { title: webView.title }
 
@@ -58,6 +68,8 @@ Page {
                 onClicked: pageStack.popAttached()
             }
         }
+
+        experimental.userAgent: "Mozilla/5.0 (Maemo; Linux; Jolla; Sailfish; Mobile) AppleWebKit/534.13 (KHTML, like Gecko) NokiaBrowser/8.5.0 Mobile Safari/534.13"
 
 //        ViewPlaceholder {
 //            id: viewPlaceHolder
